Fix h2 alignmnet for articles.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -549,6 +549,15 @@ input:focus {
     text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
 }
 
+.article h2 {
+    font-size: 24px;
+    font-weight: 700;
+    font-family: "New Times Roman";
+    text-align: left;
+    padding: 10px;
+    text-align: center;
+}
+
 .article h2, h3, h4 {
     font-size: 24px;
     font-weight: 700;
